--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartial.cshtml
@@ -108,7 +108,7 @@
     </div>
     <div class="ui-footer text-center">
         <div class="container">
-            <div class="ccopy">Powered By <a href="#">Test</a> SmartShop &copy; 2019</div>
+            <div class="ccopy">© All rights reserved - <a href="/">Gane DataScan Limited</a> - 2020</div>
         </div>
     </div>
 </footer>
