--- a/WarehouseEcommerce/Views/Shared/_FooterPartial.cshtml
+++ b/WarehouseEcommerce/Views/Shared/_FooterPartial.cshtml
@@ -47,7 +47,7 @@
     <div class="footer-bottom-area">
         <div class="container">
             <div class="copyright text-center">
-                <p>© All rights reserved, - Gane DataScan Limited - 2019</p>
+                <p>© All rights reserved - <a href="/">Gane DataScan Limited</a> - 2020</p>
             </div>
         </div>
     </div>
