--- a/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
@@ -38,7 +38,7 @@
                 <div class="row ptb-10 navbar-row">
                     <div class="col-md-3 col-sm-3 col-lg-2 logo-div">
                         <div class="logo">
-                            <a href="home"><img src="~/img/logo/logo.png" alt="" width="200" /></a>
+                            <a href="/"><img src="~/img/logo/logo.png" alt="" width="200" /></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-6 col-lg-6 top-menu">
