--- a/WarehouseEcommerce/css/style.css
+++ b/WarehouseEcommerce/css/style.css
@@ -1783,10 +1783,18 @@ label {
     }
 
 .copyright.text-center > p {
-    /*color: hsl(0, 0%, 60%);*/
     color: #ffffff;
     display: inline-block;
-    font-size: 12px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 0;
+}
+
+.copyright a {
+    color: #ffffff;
+    display: inline-block;
+    font-size: 14px;
     font-weight: 400;
     line-height: 26px;
     margin-bottom: 0;
