Imported from Changeset 2322

--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-success" onclick="CartItemCount(); history.go(0);">Continue Shoping</button>
+                    <button type="button" class="btn btn-success" onclick="CartItemCount();">Continue Shoping</button>
                     <a href="@Url.Action("AddToCart","Products")" type="button" class="btn btn-default">Go to Cart</a>
                 </div>
             </div>
