--- a/WMS/Views/TenantDepartment/_TenantDepartmentList.cshtml
+++ b/WMS/Views/TenantDepartment/_TenantDepartmentList.cshtml
@@ -36,13 +36,14 @@
         settings.Columns.Add(c =>
         {
             c.FieldName = "ImagePath";
+
             c.SetDataItemTemplateContent(m =>
             {
                 var path = (string)DataBinder.Eval(m.DataItem, "ImagePath");
                 if (!string.IsNullOrEmpty(path))
                 {
 
-                    ViewContext.Writer.Write("<img src='" + path + "' style='height:30px;width:30px'>");
+                    ViewContext.Writer.Write("<a target='_new' href=\"" + Url.Content(DataBinder.Eval(m.DataItem, "ImagePath" ).ToString()) + "\"><img style='width:100%' src=\"" + Url.Content(DataBinder.Eval(m.DataItem, "ImagePath" ).ToString()) + "\" alt=\"\" /></a>");
                 }
             });
         });
