Made some UI changes Imported from Changeset 2326

--- a/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
+++ b/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
@@ -5271,3 +5271,7 @@ ul.list-inline > li.li-mhp-menu:hover > ul.mhp-menu {
 .search-item, .search-item a {
     height: 46px !important;
 }
+
+#follow-us{
+    padding-top: 70px;
+}
