--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartial.cshtml
@@ -25,9 +25,9 @@
                             <button type="button" class="btn btn-primary toggle collapsed" data-toggle="collapse" data-target="#about"></button>
                         </h5>
                         <div id="about" class="collapse footer-collapse footabout">
-                            <img src="/Areas/Shop/Content/app/img/logo.png" class="img-responsive" alt="">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis ultricies metus. Integer laoreet rhoncus ipsum, a ornare mi. Pellentesque elementum fringilla risus,</p>
-                            <h5 class="text-capitalize">Follow Us</h5>
+                            <a href="/Shop"><img src="/Areas/Shop/Content/app/img/logo.png" class="img-responsive" alt=""></a>
+                            @*<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis ultricies metus. Integer laoreet rhoncus ipsum, a ornare mi. Pellentesque elementum fringilla risus,</p>*@
+                            <h5 id="follow-us" class="text-capitalize">Follow Us</h5>
                             <ul class="list-unstyled list-inline social">
                                 <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
