--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopCategoryPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopCategoryPartial.cshtml
@@ -18,17 +18,19 @@
                 <ul class="nav nav-tabs">
                     @if (Model != null)
                     {
+                        @Html.Hidden("ProductGroupIds", Model.FirstOrDefault()?.ProductGroupId)
+
                         foreach (var item in Model)
                         {
-                            <li class="webTab"><a data-toggle="tab" onclick="getTopCategoryProducts(@item.ProductGroupId)">@item.ProductGroup</a> </li>
+                            <li class="webTab"><a data-toggle="tooltip" title="@item.ProductGroup" id="catID_@item.ProductGroupId" onclick="getTopCategoryProducts(@item.ProductGroupId)">@item.ProductGroup</a> </li>
                         }
                     }
                     @*<li class="active webTab"><a href="#tab-2" data-toggle="tab">Web Cameras</a></li>*@
                 </ul>
             </div>
-            <div class="tab-content col-lg-10 col-md-10 col-sm-12">
+            <div class="tab-content">
                 <div class="tab-pane fade active in" id="top_category_products">
-                  
+
                 </div>
             </div>
         </div>
