Added the company address and linked it to google maps Imported from Changeset 2329

--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartial.cshtml
@@ -88,9 +88,9 @@
                         </h5>
                         <div id="contact" class="collapse footer-collapse footcontact ">
                             <ul class="list-unstyled f-left">
-                                <li><img src="/Areas/Shop/Content/app/img/icons/location.png" alt=""><span>76 Division St<br>Brick, NJ 08723</span></li>
+                                <li><img src="/Areas/Shop/Content/app/img/icons/location.png" alt=""><a href="https://goo.gl/maps/iXCZicifeHYpBN7LA"<span>Airedale House, Clayton Wood Rise<br>Leeds LS16 6RF</span></a></li>
                                 <li><img src="/Areas/Shop/Content/app/img/icons/email.png" alt=""><span>contact@example.com</span></li>
-                                <li><img src="/Areas/Shop/Content/app/img/icons/phone.png" alt=""><span>+1 123 456 7890</span></li>
+                                <li><img src="/Areas/Shop/Content/app/img/icons/phone.png" alt=""><span>+44 333-32 30 202</span></li>
                             </ul>
                             <br />
                             <h5 class="text-capitalize">Payment</h5>
