--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_Layout.cshtml
@@ -97,7 +97,7 @@
 
     </div>
 
-    @Html.Partial("_FooterPartial")
+    @Html.Action("_FooterPartialArea", "Home")
 
 
     @Scripts.Render("~/bundles/jquery")
