Moved the banner below and reduced the height of the main sliding banner Imported from Changeset 2335

--- a/WarehouseEcommerce/Areas/Shop/Content/Site.css
+++ b/WarehouseEcommerce/Areas/Shop/Content/Site.css
@@ -119,7 +119,8 @@
 }
 @media(min-width:1700px) {
     .home-slider img {
-        height: 525px !important;
+        width: 1920px;
+        height: 420px !important;
     }
 }
 .nav-menue a:hover {
