--- a/WMS/Views/Shared/_Uploader.cshtml
+++ b/WMS/Views/Shared/_Uploader.cshtml
@@ -18,17 +18,20 @@
     if (controllerName == "TenantDepartment" || controllerName == "ProductGroup" || controllerName=="ProductManufacturers")
     {
         settings.AdvancedModeSettings.EnableMultiSelect = false;
+        settings.UploadMode = UploadControlUploadMode.Standard;
         settings.AutoStartUpload = true;
+        settings.NullText = "Select file...";
     }
     else
     {
         settings.AdvancedModeSettings.EnableMultiSelect = true;
-       
+        settings.NullText = "Select multiple files...";
+
     }
     settings.AdvancedModeSettings.EnableFileList = true;
     settings.AdvancedModeSettings.EnableDragAndDrop = true;
 
-    settings.NullText = "Select multiple files...";
+
     settings.CallbackRouteValues = new { Controller = controllerName, Action = "UploadFile" };
     settings.Size = 30;
     settings.ValidationSettings.Assign(new UploadControlValidationSettings { AllowedFileExtensions = new string[] { ".jpg", ".jpeg", ".gif", ".png", ".avi", ".mp4", ".pdf", ".docx", ".xlxs" }, MaxFileSize = 100000000 });
