Minor typo fix Imported from Changeset 2340

--- a/WMS/Views/Pallets/_PalletsDispatch.cshtml
+++ b/WMS/Views/Pallets/_PalletsDispatch.cshtml
@@ -101,7 +101,7 @@
                     ViewContext.Writer.Write("<a href='javascript:void(0)' alt='Print Delivery Note' class='btn fa fa-picture-o' onclick=" + function + " role='button'></a>");
                 }
                 ViewContext.Writer.Write("<a target='javascript:void(0)' alt='Edit dispatches' title='Edit dispatch' class='btn fa fa-pencil' onclick=" + editDispatchFunction + " role='button'></a>");
-                ViewContext.Writer.Write("<a href='/pallets/orderProcess?OrderProcessId="+orderproccessId+"&DispatchId="+dispatchId+"' alt='Add dispatches' title='Add dispatch' class='btn fa fa-plus'></a>");
+                ViewContext.Writer.Write("<a href='/pallets/orderProcess?OrderProcessId="+orderproccessId+"&DispatchId="+dispatchId+"' alt='Add to dispatches' title='Add to dispatch' class='btn fa fa-plus'></a>");
 
 
 
